# RU_imperative_programming

./: .gitignore  README.md
demo/wxCharles/: agent.cpp
demo/wxCharles/framework/: app.cpp  scenario.cpp  trace_list_control.cpp
week1/wxCharles/: agent.cpp
week1/wxCharles/framework/: charles.cpp  charles.h  world.cpp
week_1/wxCharles/: CMakeLists.txt  agent.cpp
week_1/wxCharles/assignments/: demo.h
week_1/wxCharles/assignments/util/: common_worldgen.h  include_guard.h
week_1/wxCharles/framework/: assignment.h  freeplay_window.cpp  scenario.h  simulation_window.cpp  trace.h  trace_list_control.h:Zone.Identifier  world.h  world.h:Zone.Identifier  world_control.cpp  world_control.h
week_1/wxCharles/framework/res/: charles-icon.xpm  charles-icon.xpm:Zone.Identifier
week_10/mandatory/: CMakeLists.txt  assignment_10.txt  main.cpp  main_test.cpp  sorting1.csv
week_10/mandatory/files/: Tracks.txt  Tracks.txt:Zone.Identifier
week_11/mandatory/: CMakeLists.txt  main.cpp  main_test.cpp
week_12/mandatory/: CMakeLists.txt  main.cpp  main_test.cpp
week_12/mandatory/files/: Andrew.txt  Belle.txt  Chris.txt  Desiree.txt  Edward.txt  Fabienne.txt  giftstore.txt
week_2/wxCharles/: agent.cpp
week_2/wxCharles/assignments/: assignment2.h
week_2/wxCharles/framework/: assignment.cpp  assignment.cpp:Zone.Identifier  simulation_window.h  world.cpp  world.h
week_3/: CMakeLists.txt  main.cpp
week_3/bonus/: CMakeLists.txt  main.cpp
week_4/: CMakeLists.txt  main.cpp
week_4/bonus/: CMakeLists.txt  main.cpp
week_4/mandatory/: main_test.cpp
week_5/bonus/: CMakeLists.txt  main.cpp  main_test.cpp
week_5/bonus/files/: secret.txt
week_5/mandatory/: .gitignore  CMakeLists.txt  main.cpp  main_test.cpp
week_5/mandatory/files/: test.txt  test_encrypted_with_1.txt  test_encrypted_with_42.txt  test_encrypted_with_42.txt:Zone.Identifier  test_encrypted_with_65535.txt  test_encrypted_with_96.txt
week_6/bonus/: CMakeLists.txt  animation.h  main.cpp
week_6/bonus/files/: 10_cell_row.txt  Gosper_glider_gun.txt  glider0.txt  glider2.txt  glider3.txt
week_6/mandatory/: CMakeLists.txt  main.cpp  main_test.cpp
week_6/mandatory/files/: bad_format_1.txt  bad_format_2.txt  glider1.txt  glider4.txt  pulsar.txt
week_7/mandatory/: CMakeLists.txt  main.cpp  main_test.cpp
week_7/mandatory/files/: desktop.txt
week_8/bonus/: CMakeLists.txt  main.cpp  main_test.cpp
week_8/bonus/files/: TracksTestDB.txt  output_artist_The.txt  output_artists_with_albums_king.txt  output_cd_with_tracks_world.txt  output_cds.txt  output_cds_Wi.txt  output_runningtime_time.txt  output_time.txt  output_track_hope.txt  output_year_2021.txt
week_8/mandatory/: CMakeLists.txt  main.cpp  main_test.cpp
week_8/mandatory/files/: TracksOneTrackDB.txt
week_9/mandatory/: CMakeLists.txt  main.cpp  main_test.cpp
wxCharles-Assignment-1/: agent.cpp
wxCharles-Assignment-1/assignments/: assignment1.h
wxCharles-Assignment-1/framework/: freeplay_window.h  trace.cpp  trace_list_control.h
(+5 files in other folders)
